--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,13 @@ CLAUDE.md
 
 # Markdown
 *.md
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Built assets
+static/css/*.min.css
+static/js/*.min.js
