--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ Flask-Login==0.6.2
 Flask-WTF==1.1.1
 Flask-Limiter==3.5.0
 python-dotenv==1.0.0
-gunicorn==21.2.0; sys_platform != "win32"
-waitress==2.1.2
+gunicorn==21.2.0
+waitress==2.1.2; sys_platform == "win32"
