Add login form component with error handling and loading state
- Implemented a functional LoginForm component using React hooks.
- Added state management for username, password, error messages, and loading status.
- Integrated form submission with fetch API to handle login requests.
- Displayed error messages and loading indicators based on the login process.
- Styled the form for better user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -216,5 +216,5 @@ yarn-debug.log*
 yarn-error.log*
 
 # Built assets
-static/css/*.min.css
-static/js/*.min.js
+# static/css/*.min.css
+# static/js/*.min.js
